# ai_coding_assistant

./: .coverage  .dockerignore  .gitattributes  .gitignore  DevPilot.bat  Dockerfile  Makefile  README.md  conftest.py  docker-compose.yml  setup.bat  setup.sh  skills.md
.github/workflows/: ci.yml
backend/: desktop_run.py  launcher.py  requirements.txt  run.py
backend/app/: agent.py  async_files.py  config.py  (+15 more)
electron/: main.js  package-lock.json  package.json  preload.js
frontend/: package-lock.json  package.json  test_out.txt  test_results.txt  test_run.txt  vite.config.ts
langgraph/: __init__.py  graph.py
node_backend/: Dockerfile  README.md  package.json
parallel_agent_system/: __init__.py  pyproject.toml
parallel_agent_system/agents/: __init__.py  base.py  code_agent.py  docs_agent.py  review_agent.py  test_agent.py
parallel_agent_system/core/: config.py  errors.py  state.py
parallel_agent_system/graph/: supervisor.py
parallel_agent_system/graph/nodes/: decompose.py  router.py
parallel_agent_system/monitor/: stuck_detector.py
parallel_agent_system/parallel_agent_system.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
parallel_agent_system/runtime/: agent_runtime.py  event_store.py  secret_registry.py  skills_loader.py  workspace_factory.py
parallel_agent_system/tests/: conftest.py
parallel_agent_system/tests/integration/: test_failure_paths.py  test_log_summarisation.py  test_parallel_load.py  test_parallel_run.py  test_redis_pool.py
parallel_agent_system/tests/unit/: test_agents.py  test_decompose.py  test_state.py
(+123 files in other folders)
